# dl_infer_local

./: CMakeLists.txt  README.md  config.hpp  git_push.bat  main.cpp  version.h.in
Controller/: README.md  ThreadController.hpp
Controller/Communication/: ICommunication.hpp  TCPCommunication.hpp  TCPController.hpp  UDPCommunication.hpp  example.cpp
Controller/DisplayProcess/: DisplayController.hpp  detection_result_process.h  display_process.h  ocr_result_process.h  result_process_base.h  result_process_factory.h
Controller/DisplayProcess/Base/: display_base_define.h  display_process.cpp  display_process.h  display_process_define.h  display_process_impl.h  result_process_base.h
Controller/DisplayProcess/Classification/: classification_process.h
Controller/DisplayProcess/Detection/: detection_process.h
Controller/DisplayProcess/OCR/: ocr_process.h
Controller/DisplayProcess/Segmentation/: segmentation_process.h
Controller/DisplayProcess/display_base/: CMakeLists.txt  display_base.cpp  display_base.h  display_base_define.h  display_base_impl.h
Controller/DisplayProcess/display_process_cls/: display_process_cls.h
Controller/DisplayProcess/display_process_det/: display_process_det.h
Controller/DisplayProcess/display_process_ocr/: display_process_ocr.h
Controller/DisplayProcess/display_process_seg/: display_process_seg.h
Controller/InferProcess/: ImageProcessor.hpp
Controller/InferProcess/Infer_base/: CMakeLists.txt  infer_process.cpp  infer_process.h  infer_process_define.h  infer_process_impl.h
Controller/InputCamera/: CameraController.hpp
Controller/txr_algo_dlm/: CMakeLists.txt  txr_algo_dlm.cpp  txr_algo_dlm.h  txr_algo_dlm_define.h  txr_algo_dlm_impl.h
Data/: ConfigManager.cpp  ConfigManager.hpp  DataManager.hpp  SharedMemory.hpp
Interface/: MainWindow.hpp
cmake/: modules.cmake
config/: config.yaml  default.yaml  development.yaml  production.yaml
embedded/: README.md
pc_app/: README.md
server/: README.md
